--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <a rel="noopener" href="Yurts.html">Yurts</a>
       <a rel="noopener" href="Activities.html">Activities</a>
       <a rel="noopener" href="Reservation.html">Reservation</a>
+      <a rel="noopener" href="Reservation.html">Reservation</a>
     </nav>
     <main><span class="resort">
       <h2>The Yurt at Pacific Trails</h2>
