--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </dd>
       </dl>
     </main>
-    <footer>Copyright &#169; 2022 Kevin Rabari</footer>
+    <footer>Copyright &#169; 2022 Krabari7969@conestogac.on.ca</footer>
     </div>
   </body>
 </html>
